feat(style): Implementado o SCSS, Wrapper e Constantes
Classes padrões em SCSS, Wrapper para conteúdo, Header, Footer, Variaveis Globais e página Home

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -19,12 +19,34 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>My page</title>
     <!-- Fonts to support Material Design -->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
+
+    <!-- HTML Meta Tags -->
+    <title>MeuCarro - Compre seu carro usado!</title>
+    <meta name="description" content="Temos de todas as marcas e modelos para o seu estilo de vida!">
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="MeuCarro - Compre seu carro usado!">
+    <meta itemprop="description" content="Temos de todas as marcas e modelos para o seu estilo de vida!">
+    <meta itemprop="image" content="http://framerusercontent.com/modules/XGlgWyQ08lVhjrk8BQH9/P5hOLpgz4NCwwNKx0qVE/assets/ljzCBknke3c9XWGhavwiN9LFs4.jpg">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://www.framer.com">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="MeuCarro - Compre seu carro usado!">
+    <meta property="og:description" content="Temos de todas as marcas e modelos para o seu estilo de vida!">
+    <meta property="og:image" content="http://framerusercontent.com/modules/XGlgWyQ08lVhjrk8BQH9/P5hOLpgz4NCwwNKx0qVE/assets/ljzCBknke3c9XWGhavwiN9LFs4.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="MeuCarro - Compre seu carro usado!">
+    <meta name="twitter:description" content="Temos de todas as marcas e modelos para o seu estilo de vida!">
+    <meta name="twitter:image" content="http://framerusercontent.com/modules/XGlgWyQ08lVhjrk8BQH9/P5hOLpgz4NCwwNKx0qVE/assets/ljzCBknke3c9XWGhavwiN9LFs4.jpg">
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
